# dkit

./: .gitignore  HISTORY.md  INSTALL  INSTALL.md  INSTALL.sh  MANIFEST.in  Makefile  README.md  TODO.md  db_requirements.txt  optional.txt  print_version.py  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  todo.md
dkit/: __init__.py  base.py  decorators.py  exceptions.py  messages.py  multi_processing.py  typing_helper.py
examples/: example_athena_dll.py  example_barplot.py  example_cmd_application.py  example_configured_application.py  example_console_plot.py  example_counter_logger.py  example_document.py  example_eda.py  example_etl_multiprocessing.py  example_etl_multiprocessing_pipeline.py  example_ext_sql_alchemy.py  example_heatmap.py  example_histplot.py  example_html_renderer.py  example_latex.py  example_list_pipeline.py  example_pipeline.py  example_reportlab.py  example_reportlab_helper.py  example_xml_source.py  stylesheet.yaml
lib_dk/: build_module.py  explore_module.py  options.py  run_module.py  schema_module.py
scripts/cfgctl/: cfgctl.py  config_shell.py  pyproject.toml  test.yaml  test_config_shell.py
scripts/oax/: Makefile  oax.py  pyproject.toml  requirements.txt
scripts/oax/tests/: test_loader.py  test_operation_display.py
test/: Makefile  create_data.py  model.yml  pytest.ini  sample_data.py  simple_smtp_server.py  stylesheet.yaml  test_a_sink_performance.py  test_b_source_performance.py  test_bxr.py  test_canned_docs.py  test_cmd_helper.py  test_concurrency.py  test_containers.py  test_counter_logger.py  (+44 more)
(+169 files in other folders)
