[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cfgctl"
dynamic = ["version"]
description = "Interactive CLI for editing JSON and YAML configuration files"
requires-python = ">=3.9"
dependencies = [
    "cryptography",
    "dotenv", 
    "pyperclip",
    "pyyaml",
    "tabulate",
]

[project.scripts]
cfgctl = "cfgctl:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["cfgctl", "config_shell"]

[tool.setuptools.dynamic]
version = {attr = "config_shell.__version__"}
