[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oax"
authors = [
  { name = "Cobus Nel" },
]
description = "Interactive OpenAPI 3.x Explorer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "requests",
    "pyyaml",
    "jsonref",
]

[project.optional-dependencies]
color = ["rich"]

[project.scripts]
oax = "oax:main"

[tool.setuptools]
py-modules = ["oax"]

[tool.setuptools.dynamic]
version = {attr = "oax.__version__"}
